# wyzer

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main.wyz  syntax.wyz  wuz
COMANCHE/lexer/: lexer.cpp  lexer.hpp
COMANCHE/parser/: ast_prt.cpp  ast_prt.hpp  interpreter.cpp  interpreter.hpp  parser.cpp  parser.hpp
src/: common.h  ir_gen.cpp  lexer.cpp  main.cpp  parser.cpp
src/include/: ir_gen.h  lexer.h  parser.h
